// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fetch query > fetch with size 1`] = `
{
  "users||1": {
    "id": 1,
    "name": "User 1",
  },
  "users||2": {
    "id": 2,
    "name": "User 2",
  },
  "users||3": {
    "id": 3,
    "name": "User 3",
  },
  "users||4": {
    "id": 4,
    "name": "User 4",
  },
  "users||5": {
    "id": 5,
    "name": "User 5",
  },
}
`;

exports[`fetch query > fetch with size 2`] = `
{
  "products||1": {
    "id": 1,
    "name": "Product 1",
  },
  "products||2": {
    "id": 2,
    "name": "Product 2",
  },
  "products||3": {
    "id": 3,
    "name": "Product 3",
  },
  "products||4": {
    "id": 4,
    "name": "Product 4",
  },
  "products||5": {
    "id": 5,
    "name": "Product 5",
  },
}
`;

exports[`fetch query > fetch with size 3`] = `
{
  "products||1": {
    "id": 1,
    "name": "Product 1",
  },
  "products||10": {
    "id": 10,
    "name": "Product 10",
  },
  "products||2": {
    "id": 2,
    "name": "Product 2",
  },
  "products||3": {
    "id": 3,
    "name": "Product 3",
  },
  "products||4": {
    "id": 4,
    "name": "Product 4",
  },
  "products||5": {
    "id": 5,
    "name": "Product 5",
  },
  "products||6": {
    "id": 6,
    "name": "Product 6",
  },
  "products||7": {
    "id": 7,
    "name": "Product 7",
  },
  "products||8": {
    "id": 8,
    "name": "Product 8",
  },
  "products||9": {
    "id": 9,
    "name": "Product 9",
  },
}
`;

exports[`fetch query > refetch list with updated data 1`] = `
{
  "users||1": {
    "id": 1,
    "name": "User 1",
  },
  "users||2": {
    "id": 2,
    "name": "User 2",
  },
  "users||3": {
    "id": 3,
    "name": "User 3",
  },
  "users||4": {
    "id": 4,
    "name": "User 4",
  },
  "users||5": {
    "id": 5,
    "name": "User 5",
  },
}
`;

exports[`fetch query > refetch list with updated data 2`] = `
{
  "users||1": {
    "id": 1,
    "name": "Updated User 1",
  },
  "users||2": {
    "id": 2,
    "name": "User 2",
  },
  "users||3": {
    "id": 3,
    "name": "User 3",
  },
  "users||4": {
    "id": 4,
    "name": "User 4",
  },
  "users||5": {
    "id": 5,
    "name": "User 5",
  },
}
`;
